--- a/B1W5O1/assets/css/style.css
+++ b/B1W5O1/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     margin-right: auto;
 }
 
+
 .ul li {
     bottom: 10px
 }
@@ -32,3 +33,29 @@ div {
     margin-left: auto;
     margin-right: auto
 }
+
+tabblad ul {
+    position: sticky;
+    top: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+ tabblad li {
+    float: left;
+  }
+  
+ tabblad li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+ tabblad li a:hover:not(.active) {
+    background-color: #111;
+  }
