--- a/Blok 2/responsive-website/assets/css/style.css
+++ b/Blok 2/responsive-website/assets/css/style.css
@@ -1,106 +1,92 @@
+
 body{
-  font-family: 'Archivo', sans-serif;
-      margin: 0;
-  }
-  
-   .yellowbar{
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-   }
-  
-  .yellowbar img{
-       max-width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  header{
-  padding: 0;
-  margin: 0;
-  background-color: white;
-  max-width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  main img{
-    margin-bottom: 3em;
-  max-width: 100%;
-  height: auto;
-  display: block;
-  }
-  
-   header img{
-  width: 25em;
-    margin: 0 auto;
-    display: flex;
-    max-width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  .navbar{
-    overflow: hidden;
-    font-family: Arial;
-    margin-right: 13em;
-  
-  
-  }
-  
-  .navbar a{
-    float: right;
-    font-size: 16px;
+    font-family: 'Archivo', sans-serif;
+        margin: 0;
+        font-size: 16px;
+    }
+
+
+
+.body-container{
+    font-family: 'Lato', sans-serif;
+    margin: auto;
+}
+
+
+.grid-container{
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
+    grid-template-rows: 2em 11em 35em 15em 20em 35em 2em;
+    grid-gap: 10px 0 0 10px;
+    background-color: white;
+}
+
+
+
+.banner{
     margin-top: 3em;
-    color: black;
+background-image: url('../img/banner.png');
+background-size: cover;
+grid-column-start: 1;
+grid-column-end: 4;
+grid-row-start: 4;
+grid-row-end: 5;
+}
+
+ul {
+    position: absolute;
+    list-style-type: none;
+    margin-top: 6em;
+    margin-left: 34em;
+    padding: 0;
+    overflow: visible;
+  }
+  
+   a {
+    display: block;
+    color: rgb(109, 109, 109);
     text-align: center;
-    padding: 14px 16px;
+    padding: 1em 2em;
     text-decoration: none;
+    float: left;
+  }
+
+  li {
+    display: inline-block;
   }
   
-  .dropdown2{
-  float: right;
-  margin-top: 3em;
-  overflow: hidden;
-  }
-  
-  .dropdown{
-    float: right;
-    margin-top: 3em;
+.navbar{   
+ position: -webkit-sticky;
+ position: sticky;
+ top: 0;
+background-image: url('../img/navbar.png');
+height: 2.4em;
+background-size: cover;
+background-repeat: no-repeat;
+grid-column-start: 1;
+grid-column-end: 4;
+grid-row-start: 1;
+grid-row-end: 2;
+}
+
+.dropdown {
+    float: left;
     overflow: hidden;
   }
   
-  .dropdown2 .dropbtn2{
-    font-size: 16px;
+  .dropdown .dropbtn {
+    font-size: 16px;  
     border: none;
     outline: none;
-    color: black;
+    color: rgb(109, 109, 109);
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
   }
+
   
-  .dropdown .dropbtn{
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .dropdown2:hover .dropbtn2{
-  background-color: yellow;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn{
-    background-color: yellow;
-  }
-  
-  .dropdown-content2{
+  .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -109,16 +95,7 @@ body{
     z-index: 1;
   }
   
-  .dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content2 a{
+  .dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -127,47 +104,93 @@ body{
     text-align: left;
   }
   
-  .dropdown-content a{
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content2 a:hover{
-  background-color: #ddd;
-  }
-
-  .dropdown-content a:hover{
+  .dropdown-content a:hover {
     background-color: #ddd;
   }
-
-  .dropdown2:hover .dropdown-content2{
-  display: block;
-  }
   
-  .dropdown:hover .dropdown-content{
+  .dropdown:hover .dropdown-content {
     display: block;
   }
 
-  
-  .article{
-    text-align: center;
-    width: 33.3%;
-  }
-  
-  .grid-container{
-  width: 100%;
-  margin-left: 120px;
-  display: grid;
-  grid-template-columns: 330px 330px 330px;
-  grid-column-gap: 100px;
-  
+.navsmart{
+    background-image: url('../img/navsmart.png');
+    background-size: cover;
+  display: none;  
+  grid-column-start: 1;
+grid-column-end: 4;
+grid-row-start: 1;
+grid-row-end: 2;
+}
+
+.logo{
+background-image: url('../img/flexi-logo.png');
+background-size: cover;
+grid-column-start: 1;
+grid-column-end: 2;
+grid-row-start: 2;
+grid-row-end: 3;
+margin-bottom: 2em;
+}
+
+.whitenav{
+    background-image: url('../img/whitemenu.png');
+    background-size: cover;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: none;
+}
+
+.video{
+     
+    background-image: url('../img/video.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    margin-left: 15em;
   }
 
-  button {
+hr{
+    margin-left: 2em;
+  }
+
+
+
+.wallpaper{
+background-image: url('../img/auto.png');
+background-size: cover;
+background-repeat: no-repeat;
+grid-column-start: 1;
+grid-column-end: 5;
+grid-row-start: 3;
+grid-row-end: 4;
+
+}
+
+
+article{
+    text-align: center;
+    width: 33.3%;
+    margin: 0em;
+  }
+  
+.wrapdisplay {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+button {
     background-color: orange; 
     border: none;
     color: black;
@@ -178,19 +201,104 @@ body{
     font-size: 16px;
   }
 
-footer img{
-  margin-bottom: 2em;
-  margin-top: 2em;
-  margin-left: 17em;
-  width: 60em;
+  .footer {
+    background-color: rgb(247, 235, 71);
+    padding: 10px;
+    text-align: center;
 }
 
-@media (max-width: 430px) {
-  .navbar {
-    display: none;
-  }
 
-  #banner{
-    display: none;
-  }
+@media only screen and (max-width: 786px) {
+.grid-container{
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
+    grid-template-rows: 4em 9em 15em 15em 10em 20em;
+    grid-gap: 10px 0 0 10px;
+    background-color: white;
 }
+
+.wallpaper {
+    background-size: contain;
+}
+
+.navbar{
+    display: none;
+}
+.navsmart{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    display: block;
+    background-size: cover;
+}
+
+.text-container{
+    margin-left: 4em;
+}
+
+.whitenav{
+    height: 7em;
+    display: block;
+}
+
+.logo{ 
+    height: 6em;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.banner{
+    display: none;
+}
+
+.wrapdisplay{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5; 
+    width: 80%;
+    margin: 0;
+    display: block;
+ 
+}
+
+article{
+    width: 100%;
+    margin-left: 2em;
+}
+
+h1{
+    margin-right: 9em;
+}
+
+.video{
+    width: 100%;
+    height: 20em;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 8; 
+    margin: 0em;
+    margin-top: 6em;
+}
+
+.dropdown-content {
+    display: none;
+}
+
+.dropdown {
+    display: none;
+}
+
+.dropbtn{
+    display: none;
+}
+
+ul {
+    display: none;
+}
+
+}
+
